check_result.txt
    Checking axur-frontend v0.1.0 (C:\Users\maiso\.gemini\antigravity\playground\azimuthal-opportunity\axur-web\crates\frontend)
warning: unused import: `Card`
 --> crates\frontend\src\pages\dashboard.rs:4:33
  |
4 | use crate::components::{Button, Card, CardWithHeader, FullScreenLoader, Select};
  |                                 ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0525]: expected a closure that implements the `Fn` trait, but this closure only implements `FnOnce`
   --> crates\frontend\src\pages\login.rs:68:22
    |
 68 |       let submit_2fa = move || {
    |                        ^^^^^^^ this closure implements `FnOnce`, not `Fn`
...
100 |                               state.clone(),
    |                               ----- closure is `FnOnce` because it moves the variable `state` out of its environment
...
117 | /     view! {
118 | |         <div class="min-h-screen flex items-center justify-center p-4">
119 | |             <div class="w-full max-w-md">
...   |
180 | |                                 text="Verificar"
    | |                                 ---- required by a bound introduced by this call
...   |
203 | |         </div>
204 | |     }
    | |_____- the requirement to implement `Fn` derives from here
    |
note: required by a bound in `ButtonPropsBuilder::<__ImplTrait0, ((), __disabled, __loading, __on_click)>::text`
   --> crates\frontend\src\components\button.rs:11:20
    |
  8 |     #[prop(into)] text: String,
    |                   ---- required by a bound in this associated function
...
 11 |     on_click: impl Fn() + 'static,
    |                    ^^^^ required by this bound in `ButtonPropsBuilder::<__ImplTrait0, ((), __disabled, __loading, __on_click)>::text`

error[E0525]: expected a closure that implements the `Fn` trait, but this closure only implements `FnOnce`
   --> crates\frontend\src\pages\login.rs:68:22
    |
 68 |       let submit_2fa = move || {
    |                        ^^^^^^^ this closure implements `FnOnce`, not `Fn`
...
100 |                               state.clone(),
    |                               ----- closure is `FnOnce` because it moves the variable `state` out of its environment
...
117 | /     view! {
118 | |         <div class="min-h-screen flex items-center justify-center p-4">
119 | |             <div class="w-full max-w-md">
...   |
203 | |         </div>
204 | |     }
    | |     -
    | |     |
    | |_____the requirement to implement `Fn` derives from here
    |       required by a bound introduced by this call
    |
note: required by a bound in `ButtonPropsBuilder::<__ImplTrait0, ((std::string::String,), __disabled, __loading, (__ImplTrait0,))>::build`
   --> crates\frontend\src\components\button.rs:11:20
    |
  6 | #[component]
    | ------------ required by a bound in this associated function
...
 11 |     on_click: impl Fn() + 'static,
    |                    ^^^^ required by this bound in `ButtonPropsBuilder::<__ImplTrait0, ((String,), __disabled, __loading, (__ImplTrait0,))>::build`

error[E0525]: expected a closure that implements the `Fn` trait, but this closure only implements `FnOnce`
   --> crates\frontend\src\pages\login.rs:117:5
    |
117 | /     view! {
118 | |         <div class="min-h-screen flex items-center justify-center p-4">
119 | |             <div class="w-full max-w-md">
...   |
182 | |                                 on_click=submit_2fa
    | |                                          ---------- closure is `FnOnce` because it moves the variable `submit_2fa` out of its environment
...   |
203 | |         </div>
204 | |     }
    | |     ^
    | |     |
    | |_____this closure implements `FnOnce`, not `Fn`
    |       the requirement to implement `Fn` derives from here
    |
    = note: required for `Rc<dyn std::ops::Fn() -> Fragment>` to implement `ToChildren<{closure@crates\frontend\src\pages\login.rs:117:5: 204:6}>`
    = note: this error originates in the macro `view` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0593]: closure is expected to take 1 argument, but it takes 0 arguments
    --> crates\frontend\src\pages\dashboard.rs:110:34
     |
  78 |     let logout = move || {
     |                  ------- takes 0 arguments
...
 110 |                         on:click=logout
     |                         --       ^^^^^^ expected closure that takes 1 argument
     |                         |
     |                         required by a bound introduced by this call
     |
note: required by a bound in `leptos::HtmlElement::<El>::on`
    --> C:\Users\maiso\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\leptos_dom-0.6.15\src\html.rs:1139:33
     |
1135 |     pub fn on<E: EventDescriptor + 'static>(
     |            -- required by a bound in this associated function
...
1139 |         mut event_handler: impl FnMut(E::EventType) + 'static,
     |                                 ^^^^^^^^^^^^^^^^^^^ required by this bound in `HtmlElement::<El>::on`
help: consider changing the closure to take and ignore the expected argument
     |
  78 |     let logout = move |_| {
     |                        +

error[E0308]: mismatched types
   --> crates\frontend\src\pages\dashboard.rs:258:13
    |
258 |             options
    |             ^^^^^^^ expected `&BlobPropertyBag`, found `BlobPropertyBag`
    |
help: consider borrowing here
    |
258 |             &options
    |             +

Some errors have detailed explanations: E0308, E0525, E0593.
For more information about an error, try `rustc --explain E0308`.
warning: `axur-frontend` (lib) generated 1 warning
error: could not compile `axur-frontend` (lib) due to 5 previous errors; 1 warning emitted
